# FastEmbody

./: README.md  pyproject.toml
FastEmbody/: __init__.py  typing.py
FastEmbody/algorithms/: __init__.py  base.py  distillation.py  ppo.py  utils.py
FastEmbody/core/: __init__.py  buffer.py  config.py  interfaces.py  registries.py
FastEmbody/envs/: __init__.py  base.py  go2.py  unitree.py
FastEmbody/models/: __init__.py  networks.py
FastEmbody/pipelines/: __init__.py  experiment.py
FastEmbody/test/: smaleple_buffer.py
FastEmbody/trainers/: __init__.py  base.py
configs/: go2_distillation.json  unitree_go2_isaac.json  unitree_go2_ppo.json
docs/: architecture.md
examples/: train_unitree_go2.py
